AC_INIT([Alacast], [0.0.0.1], [http://uberChicGeekChick.Com/?projects=alacast], [Alacast])
AC_COPYRIGHT([Copyright (C) 2009 Kaity G. B.])

dnl  --------------
dnl | dependencies |
dnl  --------------

PKG_CHECK_MODULES(Alacast,[
			glib		>=	2.15.0
			libprce		>=	7.8
			gtk+-2.0	>=	2.14.4
			libxml-2.0	>=	2.7.1
			gstreamer-0.10	>=	0.10.22
			clutter		>=	0.8.0
			clutter-gst	>=	0.8.0
			pigment-0.3	>=	0.3.13
			libglade-2.0	>=	0.23
			sqlite3		>=	3.6.11
		dnl	lirc
		])

AC_SUBST(Alacast_CFLAGS)
AC_SUBST(Alacast_LIBS)

dnl ---------------------------------------------------------------------------

