AC_INIT([Alacast], [0.0.0.1], [http://uberChicGeekChick.Com/?projects=alacast], [Alacast])
AC_COPYRIGHT([Copyright (C) 2009 Kaity G. B.])

dnl ----------------
dnl | dependencies |
dnl ----------------
PACKAGES="
	glib-2.0		>=	2.18.2
	libpcre			>=	7.8
	gtk+-2.0		>=	2.14.4
	libxml-2.0		>=	2.7.1
	gstreamer-0.10		>=	0.10.22
	clutter-0.8		>=	0.8.0
	clutter-gst-0.8		>=	0.8.0
	pigment-0.3		>=	0.3.15
	libglade-2.0		>=	0.23
	sqlite3			>=	3.6.11
";

PKG_CHECK_MODULES(Alacast,[
			   ${PACKAGES}
		])

AC_SUBST(Alacast_CFLAGS)
AC_SUBST(Alacast_LIBS)

dnl -------------------------------------------------------------
dnl |	sets gcc's -isystem cflags                              |
dnl |	gcc will ignore errors & warning in dependencies        |
dnl -------------------------------------------------------------
packages_dirs=`pkg-config --cflags "${PACKAGES}" | sed 's/^\(.\)/\ \1/g' | sed 's/\ \-[^I][^\ ]\+//g' | sed 's/\ \-I\(\/[^\ ]\+\)/\ \1/g'`
isystem="";
for package_dir in ${packages_dirs} 
do
	for include_dir in `find ${package_dir} -type d`
	do
		isystem="${isystem} -isystem ${include_dir}";
	done
done

extra_cflags=`pkg-config --cflags "${PACKAGES}" | sed 's/^\([^\ ]\)/\ \1/g' | sed 's/\ \-I\/[^\ ]\+//g'`
if `test "${extra_cflags}" != ""`; then
	if `test "${isystem}" == ""`; then
		isystem="${extra_cflags}";
	else
		isystem="${extra_cflags}${isystem}";
	fi
fi
unset extra_cflags


if `test "$isystem" != ""`; then
	CFLAGS="${CFLAGS}$isystem";
	unset isystem
fi

if `test "$include_dir" != ""`; then unset include_dir; fi
unset packages
unset package_dirs
unset packages_dir

