alacast_HEADERS=				\
		debug.h				\
		program.h			\
		library.h			\
		gui.h				\
		gui/pigment.h			\
		gui/clutter.h			\
		gui/gtk.h			\
		alacast.h

alacast_SOURCES=				\
		debug.c				\
		program.c			\
		library.c			\
		gui.c				\
		gui/pigment.c			\
		gui/clutter.c			\
		gui/gtk.c			\
		alacast.c			\
		main.c

